// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconText Component should match snapshot for link 1`] = `
<DocumentFragment>
  <div
    class="sc-aXZVg fxkAHn"
  >
    <span
      class="octicon octicon-file"
    />
    <a
      class="sc-gEvEer dAbXZQ"
      href="https://google.com"
      target="_blank"
    >
      File test
    </a>
  </div>
</DocumentFragment>
`;

exports[`IconText Component should match snapshot for text 1`] = `
<DocumentFragment>
  <div
    class="sc-aXZVg fxkAHn"
  >
    <span
      class="octicon octicon-file"
    />
    <p>
      File test
    </p>
  </div>
</DocumentFragment>
`;
